# uvvis_data_processing

./: README.md  app.py  auswertung_1.py  functions.py  pyproject.toml
data/MB_Kalibrierung/: cal-01.Probe.csv  cal-05.Probe.csv
data/MB_Kalibrierung/MB_Kalibrierung/: cal-02.Probe.csv  cal-10.Probe.csv
