[tool.poetry]
name = "uvvisdata"
version = "0.1.0"
description = ""
authors = ["lisabormann <lisa.bormann@campus.tu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.40.2"
plotly = "^5.24.1"
scipy = "^1.14.1"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
